force-app/main/default/objects/Invoice_Line_Item__c/fields/Course_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Course_Invoice__c</fullName>
    <label>Course Invoice</label>
    <referenceTo>Course_Invoice__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>