force-app/main/default/objects/Invoice_Line_Item__c/fields/Milage__c.field-meta.xml
<CustomField>
    <fullName>Milage__c</fullName>
    <label>Milage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>