force-app/main/default/objects/Invoice_Line_Item__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <defaultValue>0.42</defaultValue>
    <label>Rate</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>