force-app/main/default/objects/Invoice_Line_Item__c/recordTypes/Air_fare.recordType-meta.xml
<RecordType>
    <fullName>Air_fare</fullName>
    <active>true</active>
    <label>Air fare</label>
</RecordType>