force-app/main/default/objects/Invoice_Line_Item__c/recordTypes/Milage.recordType-meta.xml
<RecordType>
    <fullName>Milage</fullName>
    <active>true</active>
    <label>Milage</label>
</RecordType>