force-app/main/default/objects/Invoice_Line_Item__c/recordTypes/Service.recordType-meta.xml
<RecordType>
    <fullName>Service</fullName>
    <active>true</active>
    <description>use to create a  service line item</description>
    <label>Service</label>
</RecordType>