force-app/main/default/objects/Invoice_Line_Item__c/recordTypes/Subsistance.recordType-meta.xml
<RecordType>
    <fullName>Subsistance</fullName>
    <active>true</active>
    <label>Subsistance</label>
</RecordType>