force-app/main/default/objects/Invoice_Line_Item__c/validationRules/Service_record_type_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_record_type_rule</fullName>
    <active>true</active>
    <errorConditionFormula>Course_Invoice__r.RecordType.Name = &quot;Service Invoice&quot;
 &amp;&amp; 
 RecordType.Name  &lt;&gt; &quot;Service&quot;</errorConditionFormula>
    <errorMessage>You can only use expense line items on the expense invoice.
Please chose the service record type.</errorMessage>
</ValidationRule>